src/network_policies/test4monitoring-rome-a2d9d212 Egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test4monitoring-rome-a2d9d212
  namespace: monitoring-rome-a2d9d2
spec:
  policyTypes:
  - Egress
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: milan
      podSelector:
        matchLabels:
          app: milan-payment
